--- a/frontend/src/components/productBox/ProductBox.css
+++ b/frontend/src/components/productBox/ProductBox.css
@@ -7,20 +7,21 @@
     height: 425px;
     width: 265px;
     margin: 15px;
-    background-color: white;
     border: none;
+    border-radius: 10px;
 }
 
 .Photo{
     width: 260px;
     height: 325px;
     position: relative;
+    margin-top: 2px;
 }
 
 #image{
     width: 100%;
     height: 98.5%;
-    border-radius: 5%;
+    border-radius: 10px;
 }
 
 .botom{
