--- a/frontend/src/containers/Category.css
+++ b/frontend/src/containers/Category.css
@@ -46,13 +46,12 @@
   justify-content: center;
   align-items: end;
   box-shadow: 2px 2px 7px 2px rgb(219, 219, 219);
-}
-.item a {
-  font-weight: bolder;
   font-family: "PlayfairDisplay";
   font-size: 50px;
+  font-weight: bolder;
   color: #2e3054;
 }
+
 
 .Kids {
   background-image: url(../components/Assets/images/kids.jpg);
